API get /kost/kamar
