# modules/kamar/response/kamarresponse.go
@@ -1,10 +1,10 @@
 package response
 
-import kostresponse "aplikasi-adakost-be/modules/kost/response"
+// import kostresponse "aplikasi-adakost-be/modules/kost/response"
 
 type KamarResponse struct {
-	NomorKamar  string                    `json:"nomorKamar"`
-	HargaKamar  int                       `json:"hargaKamar"`
-	StatusKamar string                    `json:"statusKamar"`
-	Kost        kostresponse.KostResponse `json:"kost"`
+	NomorKamar  string `json:"nomorKamar"`
+	HargaKamar  int    `json:"hargaKamar"`
+	StatusKamar string `json:"statusKamar"`
+	// Kost        kostresponse.KostResponse `json:"kost"`
 }
